fix image sizing on safari (I hope)

--- a/css/content.css
+++ b/css/content.css
@@ -76,7 +76,6 @@
 .section-image {
     flex-grow: 1;
     width: 40%;
-    display: flex;
     overflow: hidden;
 }
 
